# theworldfromthestars

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html
css/: main.css
langs/str-cls/: index.html
langs/str-cls/dictionary/: index.html
langs/str-cls/grammar/: index.html
langs/str-cls/phonology/: index.html
old-wfts-lang/wfts-lang/: Cargo.toml
wfts-lang/: Cargo.toml
wfts-lang/src/: fmt.rs  lib.rs  macros.rs  phonetics.rs  proto_divine.rs  semantics.rs
wfts-pedia/: Cargo.toml
wfts-pedia-ssg/: Cargo.toml
wfts-pedia-ssg/src/: component.rs  fmt.rs  lib.rs  location.rs  page.rs  site.rs  table.rs
wfts-pedia-ssg/src/component/: audio.rs  img.rs  list.rs  page.rs  table.rs  text.rs
wfts-pedia/assets/css/: main.css
wfts-pedia/src/: main.rs
wfts-star-lang/: Cargo.toml
wfts-star-lang/src/: component.rs  dictionary.rs  grammar.rs  lib.rs  morphology.rs  pages.rs  phonology.rs
wfts-star-lang/src/grammar/: adjective.rs  conjunction.rs  grammemes.rs  noun.rs  postposition.rs  pronoun.rs  verb.rs
wfts-star-lang/src/grammar/adjective/: regular.rs
wfts-star-lang/src/grammar/conjunction/: additive.rs  isomorphic.rs
wfts-star-lang/src/grammar/noun/: class1.rs  divine1.rs  divine2.rs  full1.rs  full2.rs  variable1.rs  variable2.rs
wfts-star-lang/src/grammar/postposition/: binary.rs  unary.rs
wfts-star-lang/src/grammar/pronoun/: demonstrative.rs  personal.rs  relative.rs
wfts-star-lang/src/grammar/verb/: regular1.rs
wfts-star-lang/src/pages/: dictionary.rs  grammar.rs  index.rs  phonology.rs  words.rs  writing.rs
(+1319 files in other folders)
