[package]
name = "wfts-pedia-ssg"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
percent-encoding = "2.1.0"
anyhow = "1.0.31"
thiserror = "1.0.19"
