[package]
name = "wfts-pedia"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfts-pedia-ssg = { path = "../wfts-pedia-ssg" }
wfts-lang = { path = "../wfts-lang" }
