[package]
name = "wfts-star-lang"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfts-lang = { path = "../wfts-lang" }
wfts-pedia-ssg = { path = "../wfts-pedia-ssg" }
anyhow = "1.0.31"
thiserror = "1.0.19"
indexmap = "1.5.1"
